[package]
name = "steven"
version = "0.0.1"
authors = [ "Thinkofdeath <thinkofdeath@spigotmc.org>" ]

[profile.dev]
# Steven runs horrendously slow with no optimizations, and often freezes.
# However, building with full -O3 optimizations takes too long for a debug build.
# Use an -O1 optimization level strikes a good compromise between build and program performance.
opt-level = 1

[dependencies]
sdl2 = "^0.29.0"
byteorder = "^1.0.0"
hyper = "^0.10.5"
# Recent versions of hyper no longer include support for TLS by default
# We explicitly include TLS support via openssl, which we already require anyways
hyper-openssl = "^0.2.3"
serde = "^0.9.11"
serde_json = "^0.9.9"
flate2 = "^0.2.17"
zip = "^0.2.2"
image = "^0.12.3"
time = "^0.1.36"
rand = "^0.3.15"
rustc-serialize = "^0.3.22"
log = "^0.3.7"
cgmath = "^0.12.0"
lazy_static = "^0.2.4"
collision = "^0.9.0"
openssl = "^0.9.8"
# clippy = "*"

[dependencies.steven_gl]
path = "./gl"
version = "0"

[dependencies.steven_resources]
path = "./resources"
version = "0"

[dependencies.steven_blocks]
path = "./blocks"
version = "0"

[dependencies.steven_shared]
path = "./shared"
version = "0"
